upd pages content to latest ver. ( from prod env )

--- a/files for admin/CMS Pages/services.phtml
+++ b/files for admin/CMS Pages/services.phtml
@@ -39,7 +39,7 @@
                         data-order-mob="3"
                         data-order-desktop="2"
                 >
-                    <p class="service-squares__text" itemprop="name">Magento 2 Migration</p>
+                    <p class="service-squares__text" itemprop="name">Migration to Magento 2</p>
                 </a>
                 <meta itemprop="position" content="2" />
             </div>
@@ -136,7 +136,7 @@
                         </p>
                     </div>
                     <a href="{{store url='services/comprehensive-web-design'}}">
-                        <button type="button" class="service-section__button _button _button--arrow" style="color: #333">
+                        <button type="button" class="service-section__button _button _button--arrow">
                             <span class="_button__text"> Discover more </span>
                             <span class="_button__text-overlay" style="clip: rect(0px, 0px, 24px, 0px)"> Discover more </span>
                             <span class="_button__overlay _button__overlay--hover"></span>
@@ -156,7 +156,7 @@
                         class="service-section__mobile"
                         href="{{store url='services/comprehensive-web-design'}}"
                 >
-                    <button type="button" class="service-section__mobile-button _button _button--arrow" style="color: #333">
+                    <button type="button" class="service-section__mobile-button _button _button--arrow">
                         <span class="_button__text"> Discover more </span>
                         <span class="_button__text-overlay" style="clip: rect(0px, 0px, 24px, 0px)"> Discover more </span>
                         <span class="_button__overlay _button__overlay--hover"></span>
@@ -195,7 +195,7 @@
                         </p>
                     </div>
                     <a href="{{store url='services/magento-development'}}">
-                        <button type="button" class="service-section__button _button _button--arrow" style="color: #333">
+                        <button type="button" class="service-section__button _button _button--arrow">
                             <span class="_button__text"> Discover more </span>
                             <span class="_button__text-overlay" style="clip: rect(0px, 0px, 24px, 0px)"> Discover more </span>
                             <span class="_button__overlay _button__overlay--hover"></span>
@@ -207,7 +207,7 @@
                         class="service-section__mobile"
                         href="{{store url='services/magento-development'}}"
                 >
-                    <button type="button" class="service-section__mobile-button _button _button--arrow" style="color: #333">
+                    <button type="button" class="service-section__mobile-button _button _button--arrow">
                         <span class="_button__text"> Discover more </span>
                         <span class="_button__text-overlay" style="clip: rect(0px, 0px, 24px, 0px)"> Discover more </span>
                         <span class="_button__overlay _button__overlay--hover"></span>
@@ -227,8 +227,8 @@
                 <div class="service-section__label _section-label" itemprop="keywords">Migration</div>
                 <div class="service-section__content">
                     <h3 class="h3 service-section__title" itemprop="name">
-                        Magento 2 <br />
-                        Migration
+                        Migration to <br />
+                        Magento 2
                     </h3>
                     <p class="service-section__text" itemprop="description">
                         Some merchants perceive the Magento 1 to Magento 2 migration process as intimidating, resulting in their
@@ -236,7 +236,7 @@
                         features and demonstrated the platform's robustness.
                     </p>
                     <a href="{{store url='services/migration-to-magento-2'}}">
-                        <button type="button" class="service-section__button _button _button--arrow" style="color: #333">
+                        <button type="button" class="service-section__button _button _button--arrow">
                             <span class="_button__text"> Discover more </span>
                             <span class="_button__text-overlay" style="clip: rect(0px, 0px, 24px, 0px)"> Discover more </span>
                             <span class="_button__overlay _button__overlay--hover"></span>
@@ -256,7 +256,7 @@
                         class="service-section__mobile"
                         href="{{store url='services/migration-to-magento-2'}}"
                 >
-                    <button type="button" class="service-section__mobile-button _button _button--arrow" style="color: #333">
+                    <button type="button" class="service-section__mobile-button _button _button--arrow">
                         <span class="_button__text"> Discover more </span>
                         <span class="_button__text-overlay" style="clip: rect(0px, 0px, 24px, 0px)"> Discover more </span>
                         <span class="_button__overlay _button__overlay--hover"></span>
@@ -285,7 +285,7 @@
                         headless eCommerce store is ahead of the competition.
                     </p>
                     <a href="{{store url='services/magento-pwa'}}">
-                        <button type="button" class="service-section__button _button _button--arrow" style="color: #333">
+                        <button type="button" class="service-section__button _button _button--arrow">
                             <span class="_button__text"> Discover more </span>
                             <span class="_button__text-overlay" style="clip: rect(0px, 0px, 24px, 0px)"> Discover more </span>
                             <span class="_button__overlay _button__overlay--hover"></span>
@@ -297,7 +297,7 @@
                         class="service-section__mobile"
                         href="/services/magento-pwa"
                 >
-                    <button type="button" class="service-section__mobile-button _button _button--arrow" style="color: #333">
+                    <button type="button" class="service-section__mobile-button _button _button--arrow">
                         <span class="_button__text"> Discover more </span>
                         <span class="_button__text-overlay" style="clip: rect(0px, 0px, 24px, 0px)"> Discover more </span>
                         <span class="_button__overlay _button__overlay--hover"></span>
@@ -332,7 +332,7 @@
                         <li>Magento code audit</li>
                     </ul>
                     <a href="{{store url='services/magento-security-audit'}}">
-                        <button type="button" class="service-section__button _button _button--arrow" style="color: #333">
+                        <button type="button" class="service-section__button _button _button--arrow">
                             <span class="_button__text"> Discover more </span>
                             <span class="_button__text-overlay" style="clip: rect(0px, 0px, 24px, 0px)"> Discover more </span>
                             <span class="_button__overlay _button__overlay--hover"></span>
@@ -352,7 +352,7 @@
                         class="service-section__mobile"
                         href="{{store url='services/magento-security-audit'}}"
                 >
-                    <button type="button" class="service-section__mobile-button _button _button--arrow" style="color: #333">
+                    <button type="button" class="service-section__mobile-button _button _button--arrow">
                         <span class="_button__text"> Discover more </span>
                         <span class="_button__text-overlay" style="clip: rect(0px, 0px, 24px, 0px)"> Discover more </span>
                         <span class="_button__overlay _button__overlay--hover"></span>
@@ -388,7 +388,7 @@
                         </p>
                     </div>
                     <a href="{{store url='services/magento-support'}}">
-                        <button type="button" class="service-section__button _button _button--arrow" style="color: #333">
+                        <button type="button" class="service-section__button _button _button--arrow">
                             <span class="_button__text"> Discover more </span>
                             <span class="_button__text-overlay" style="clip: rect(0px, 0px, 24px, 0px)"> Discover more </span>
                             <span class="_button__overlay _button__overlay--hover"></span>
@@ -401,7 +401,7 @@
                         href="{{store url='services/magento-support'}}"
                 >
                 
-                    <button type="button" class="service-section__mobile-button _button _button--arrow" style="color: #333">
+                    <button type="button" class="service-section__mobile-button _button _button--arrow">
                         <span class="_button__text"> Discover more </span>
                         <span class="_button__text-overlay" style="clip: rect(0px, 0px, 24px, 0px)"> Discover more </span>
                         <span class="_button__overlay _button__overlay--hover"></span>
@@ -431,7 +431,7 @@
                         <li>Extension data optimization</li>
                     </ul>
                     <a href="{{store url='services/server-optimization'}}">
-                        <button type="button" class="service-section__button _button _button--arrow" style="color: #333">
+                        <button type="button" class="service-section__button _button _button--arrow">
                             <span class="_button__text"> Discover more </span>
                             <span class="_button__text-overlay" style="clip: rect(0px, 0px, 24px, 0px)"> Discover more </span>
                             <span class="_button__overlay _button__overlay--hover"></span>
@@ -451,7 +451,7 @@
                         class="service-section__mobile"
                         href="/services/server-optimization"
                 >
-                    <button type="button" class="service-section__mobile-button _button _button--arrow" style="color: #333">
+                    <button type="button" class="service-section__mobile-button _button _button--arrow">
                         <span class="_button__text"> Discover more </span>
                         <span class="_button__text-overlay" style="clip: rect(0px, 0px, 24px, 0px)"> Discover more </span>
                         <span class="_button__overlay _button__overlay--hover"></span>
@@ -481,7 +481,7 @@
                         and your products.
                     </p>
                     <a href="{{store url='services/implementation-google-analytics-4-on-magento-2-with-gtm'}}">
-                        <button type="button" class="service-section__button _button _button--arrow" style="color: #333">
+                        <button type="button" class="service-section__button _button _button--arrow">
                             <span class="_button__text"> Discover more </span>
                             <span class="_button__text-overlay" style="clip: rect(0px, 0px, 24px, 0px)"> Discover more </span>
                             <span class="_button__overlay _button__overlay--hover"></span>
@@ -493,7 +493,7 @@
                         class="service-section__mobile"
                         href="{{store url='services/implementation-google-analytics-4-on-magento-2-with-gtm'}}"
                 >
-                    <button type="button" class="service-section__mobile-button _button _button--arrow" style="color: #333">
+                    <button type="button" class="service-section__mobile-button _button _button--arrow">
                         <span class="_button__text"> Discover more </span>
                         <span class="_button__text-overlay" style="clip: rect(0px, 0px, 24px, 0px)"> Discover more </span>
                         <span class="_button__overlay _button__overlay--hover"></span>
