--- a/files for admin/CMS Pages/works.phtml
+++ b/files for admin/CMS Pages/works.phtml
@@ -1,194 +1,202 @@
+<style>
+    @media screen and (max-width: 575px){
+        .work-page__info--wmf{
+            align-self: start;
+            padding-left: 15px;
+        }
+    }
+</style>
 <div class="work-page">
-  <div class="work-page__container _container">
-    <h1 class="h2 work-page__title">
-      best-in-class <br />
-      eCommerce solutions
-    </h1>
-    <h2 class="h4 work-page__sub-title">
-      Our passion lies in making complex things simple. We design and build websites,<br />
-      e-commerce stores for some of the largest organisations in the world.
-    </h2>
+    <div class="work-page__container _container">
+        <h1 class="h2 work-page__title">
+            best-in-class <br />
+            eCommerce solutions
+        </h1>
+        <h2 class="h4 work-page__sub-title">
+            Our passion lies in making complex things simple. We design and build websites,<br />
+            e-commerce stores for some of the largest organisations in the world.
+        </h2>
 
-    <a class="work-page__row" href="https://www.vodafone.ua/shop/" target="_blank">
-      <div class="row__img work-page__image">
-        <img loading="eager" src="{{media url='wysiwyg/work/vodafone_banner.png'}}" alt="Vodafone online store development" />
-      </div>
-      <div class="work-page__info">
-        <h4 class="_h4">
-          Vodafone
-          <i class="work-page__link-mobile _link-www-icon _link-www-icon--mobile"></i>
-        </h4>
-        <h5 class="h5">
-          Online store of the leading mobile operator Vodafone Ukraine, which serves more than 19 million subscribers.
-        </h5>
-        <p class="work-page__small-text">Development, integrations, support</p>
-        <i class="work-page__link-desktop _link-www-icon"></i>
-      </div>
-    </a>
+        <a class="work-page__row" href="https://www.vodafone.ua/shop/" target="_blank">
+            <div class="row__img work-page__image">
+                <img loading="eager" src="{{media url='wysiwyg/work/vodafone_banner.png'}}" alt="Vodafone online store development" />
+            </div>
+            <div class="work-page__info">
+                <h4 class="_h4">
+                    Vodafone
+                    <i class="work-page__link-mobile _link-www-icon _link-www-icon--mobile"></i>
+                </h4>
+                <h5 class="h5">
+                    Online store of the leading mobile operator Vodafone Ukraine, which serves more than 19 million subscribers.
+                </h5>
+                <p class="work-page__small-text">Development, integrations, support</p>
+                <i class="work-page__link-desktop _link-www-icon"></i>
+            </div>
+        </a>
 
-    <a class="work-page__dual-top" href="https://www.ortlieb.com/" target="_blank">
-      <div class="dual-top__img work-page__image">
-        <img loading="eager" src="{{media url='wysiwyg/work/ortileb_banner.png'}}" alt="Ortlieb online store development" />
-      </div>
-      <div class="work-page__info">
-        <h4 class="_h4">
-          Ortlieb
-          <i class="work-page__link-mobile _link-www-icon _link-www-icon--mobile"></i>
-        </h4>
-        <h5 class="h5">Online store of the the world’s leading brand of waterproof premium equipment.</h5>
-        <p class="work-page__small-text">Development, integrations, support</p>
-        <i class="work-page__link-desktop _link-www-icon"></i>
-      </div>
-    </a>
+        <a class="work-page__dual-top" href="https://www.ortlieb.com/" target="_blank">
+            <div class="dual-top__img work-page__image">
+                <img loading="eager" src="{{media url='wysiwyg/work/ortileb_banner.png'}}" alt="Ortlieb online store development" />
+            </div>
+            <div class="work-page__info">
+                <h4 class="_h4">
+                    Ortlieb
+                    <i class="work-page__link-mobile _link-www-icon _link-www-icon--mobile"></i>
+                </h4>
+                <h5 class="h5">Online store of the the world’s leading brand of waterproof premium equipment.</h5>
+                <p class="work-page__small-text">Development, integrations, support</p>
+                <i class="work-page__link-desktop _link-www-icon"></i>
+            </div>
+        </a>
 
-    <!-- Dr.Berg -->
-    <a class="work-page__dual-bottom" href="https://shop.drberg.com/" target="_blank">
-      <div class="dual-bottom__img work-page__image">
-        <img loading="lazy" src="{{media url='wysiwyg/work/dr_berg_banner.png'}}" alt="Dr Berg ecommerce development" />
-      </div>
-      <div class="work-page__info">
-        <h4 class="_h4">
-          Dr.Berg
-          <i class="work-page__link-mobile _link-www-icon _link-www-icon--mobile"></i>
-        </h4>
-        <h5 class="h5">
-          The online store of Dr. Eric Berg, who is a famous chiropractor and health educator, an expert in Healthy
-          Keto® and intermittent fasting.
-        </h5>
-        <p class="work-page__small-text">Development, integrations, support</p>
-        <i class="work-page__link-desktop _link-www-icon"></i>
-      </div>
-    </a>
+        <!-- Dr.Berg -->
+        <a class="work-page__dual-bottom" href="https://shop.drberg.com/" target="_blank">
+            <div class="dual-bottom__img work-page__image">
+                <img loading="lazy" src="{{media url='wysiwyg/work/dr_berg_banner.png'}}" alt="Dr Berg ecommerce development" />
+            </div>
+            <div class="work-page__info">
+                <h4 class="_h4">
+                    Dr.Berg
+                    <i class="work-page__link-mobile _link-www-icon _link-www-icon--mobile"></i>
+                </h4>
+                <h5 class="h5">
+                    The online store of Dr. Eric Berg, who is a famous chiropractor and health educator, an expert in Healthy
+                    Keto® and intermittent fasting.
+                </h5>
+                <p class="work-page__small-text">Development, integrations, support</p>
+                <i class="work-page__link-desktop _link-www-icon"></i>
+            </div>
+        </a>
 
-    <!-- Tefal -->
-    <a class="work-page__row-reverse" href="https://shop.tefal.ua/" target="_blank">
-      <div class="row-reverse__img work-page__image">
-        <img loading="lazy" src="{{media url='wysiwyg/work/tefal_banner.png'}}" alt="Tefal online store development" />
-      </div>
-      <div class="work-page__info">
-        <h4 class="_h4">
-          Tefal
-          <i class="work-page__link-mobile _link-www-icon _link-www-icon--mobile"></i>
-        </h4>
-        <h5 class="h5">
-          Tefal is by your side to help you get the best out of every day in the simplest manner possible. With its
-          high-performance and easy-to-use innovations, Tefal helps you to seamlessly create a home full of life.
-        </h5>
-        <p class="work-page__small-text">Design, development, integrations, support</p>
-        <i class="work-page__link-desktop _link-www-icon"></i>
-      </div>
-    </a>
+        <!-- Tefal -->
+        <a class="work-page__row-reverse" href="https://shop.tefal.ua/" target="_blank">
+            <div class="row-reverse__img work-page__image">
+                <img loading="lazy" src="{{media url='wysiwyg/work/tefal_banner.png'}}" alt="Tefal online store development" />
+            </div>
+            <div class="work-page__info">
+                <h4 class="_h4">
+                    Tefal
+                    <i class="work-page__link-mobile _link-www-icon _link-www-icon--mobile"></i>
+                </h4>
+                <h5 class="h5">
+                    Tefal is by your side to help you get the best out of every day in the simplest manner possible. With its
+                    high-performance and easy-to-use innovations, Tefal helps you to seamlessly create a home full of life.
+                </h5>
+                <p class="work-page__small-text">Design, development, integrations, support</p>
+                <i class="work-page__link-desktop _link-www-icon"></i>
+            </div>
+        </a>
 
-    <!-- Krups -->
-    <a class="work-page__dual-top-reverse" href="https://www.krups.ua/" target="_blank">
-      <div class="dual-top-reverse__img work-page__image">
-        <img loading="lazy" src="{{media url='wysiwyg/work/krups_banner.png'}}" alt="Krups online store development" />
-      </div>
-      <div class="work-page__info">
-        <h4 class="_h4">
-          Krups
-          <i class="work-page__link-mobile _link-www-icon _link-www-icon--mobile"></i>
-        </h4>
-        <h5 class="h5">
-          Krups has been the German expert in coffee and food preparation since 1846. Krups design robust and precise
-          products that are a pleasure to use, enabling you to achieve the detail that will make all the difference and
-          delight your loved ones.
-        </h5>
-        <p class="work-page__small-text">Design, development, integrations, support</p>
-        <i class="work-page__link-desktop _link-www-icon"></i>
-      </div>
-    </a>
+        <!-- Krups -->
+        <a class="work-page__dual-top-reverse" href="https://www.krups.ua/" target="_blank">
+            <div class="dual-top-reverse__img work-page__image">
+                <img loading="lazy" src="{{media url='wysiwyg/work/krups_banner.png'}}" alt="Krups online store development" />
+            </div>
+            <div class="work-page__info">
+                <h4 class="_h4">
+                    Krups
+                    <i class="work-page__link-mobile _link-www-icon _link-www-icon--mobile"></i>
+                </h4>
+                <h5 class="h5">
+                    Krups has been the German expert in coffee and food preparation since 1846. Krups design robust and precise
+                    products that are a pleasure to use, enabling you to achieve the detail that will make all the difference and
+                    delight your loved ones.
+                </h5>
+                <p class="work-page__small-text">Design, development, integrations, support</p>
+                <i class="work-page__link-desktop _link-www-icon"></i>
+            </div>
+        </a>
 
-    <!-- Soundmag -->
-    <a class="work-page__dual-bottom-reverse" href="https://soundmag.ua/" target="_blank">
-      <div class="dual-bottom-reverse__img work-page__image">
-        <img loading="lazy" src="{{media url='wysiwyg/work/soundmag_banner.png'}}" alt="Soundmag online store development" />
-      </div>
-      <div class="work-page__info">
-        <h4 class="_h4">
-          Soundmag
-          <i class="work-page__link-mobile _link-www-icon _link-www-icon--mobile"></i>
-        </h4>
-        <h5 class="h5">Online store and the first salon of personal audio</h5>
-        <p class="work-page__small-text">Design, development, integrations, support</p>
-        <i class="work-page__link-desktop _link-www-icon"></i>
-      </div>
-    </a>
+        <!-- Soundmag -->
+        <a class="work-page__dual-bottom-reverse" href="https://soundmag.ua/" target="_blank">
+            <div class="dual-bottom-reverse__img work-page__image">
+                <img loading="lazy" src="{{media url='wysiwyg/work/soundmag_banner.png'}}" alt="Soundmag online store development" />
+            </div>
+            <div class="work-page__info">
+                <h4 class="_h4">
+                    Soundmag
+                    <i class="work-page__link-mobile _link-www-icon _link-www-icon--mobile"></i>
+                </h4>
+                <h5 class="h5">Online store and the first salon of personal audio</h5>
+                <p class="work-page__small-text">Design, development, integrations, support</p>
+                <i class="work-page__link-desktop _link-www-icon"></i>
+            </div>
+        </a>
 
-    <!-- WMF -->
-    <a class="work-page__row" href="https://www.wmf.ua/" target="_blank">
-      <div class="row__img work-page__image">
-        <img loading="lazy" src="{{media url='wysiwyg/work/wmf_banner.png'}}" alt="WMF online store development" />
-      </div>
-      <div class="work-page__info">
-        <h4 class="_h4">
-          WMF
-          <i class="work-page__link-mobile _link-www-icon _link-www-icon--mobile"></i>
-        </h4>
-        <h5 class="h5">
-          WMF is your ideal kitchen partner with over 160 years of tradition. Through products designed in Germany
-          boasting top-level functionalities and iconic design, WMF simplify and heighten the best moments in food
-          preparation, cooking and the sharing of dishes and beverages
-        </h5>
-        <p class="work-page__small-text">Development, integrations, support</p>
-        <i class="work-page__link-desktop _link-www-icon"></i>
-      </div>
-    </a>
+        <!-- WMF -->
+        <a class="work-page__row" href="https://www.wmf.ua/" target="_blank">
+            <div class="row__img work-page__image">
+                <img loading="lazy" src="{{media url='wysiwyg/work/wmf_banner.png'}}" alt="WMF online store development" />
+            </div>
+            <div class="work-page__info work-page__info--wmf">
+                <h4 class="_h4">
+                    WMF
+                    <i class="work-page__link-mobile _link-www-icon _link-www-icon--mobile"></i>
+                </h4>
+                <h5 class="h5">
+                    WMF is your ideal kitchen partner with over 160 years of tradition. Through products designed in Germany
+                    boasting top-level functionalities and iconic design, WMF simplify and heighten the best moments in food
+                    preparation, cooking and the sharing of dishes and beverages
+                </h5>
+                <p class="work-page__small-text">Development, integrations, support</p>
+                <i class="work-page__link-desktop _link-www-icon"></i>
+            </div>
+        </a>
 
-    <!-- Rowenta -->
-    <a class="work-page__dual-top" href="https://www.rowenta.ua/" target="_blank">
-      <div class="dual-top__img work-page__image">
-        <img loading="lazy" src="{{media url='wysiwyg/work/rowenta_banner.png'}}" alt="Rowenta online store development" />
-      </div>
-      <div class="work-page__info">
-        <h4 class="_h4">
-          Rowenta
-          <i class="work-page__link-mobile _link-www-icon _link-www-icon--mobile"></i>
-        </h4>
-        <h5 class="h5">
-          A German specialist in steam and heat since 1909, Rowenta creates respectful solutions for home and personal
-          care for the most demanding customers.
-        </h5>
-        <p class="work-page__small-text">Development, integrations, support</p>
-        <i class="work-page__link-desktop _link-www-icon"></i>
-      </div>
-    </a>
+        <!-- Rowenta -->
+        <a class="work-page__dual-top" href="https://www.rowenta.ua/" target="_blank">
+            <div class="dual-top__img work-page__image">
+                <img loading="lazy" src="{{media url='wysiwyg/work/rowenta_banner.png'}}" alt="Rowenta online store development" />
+            </div>
+            <div class="work-page__info">
+                <h4 class="_h4">
+                    Rowenta
+                    <i class="work-page__link-mobile _link-www-icon _link-www-icon--mobile"></i>
+                </h4>
+                <h5 class="h5">
+                    A German specialist in steam and heat since 1909, Rowenta creates respectful solutions for home and personal
+                    care for the most demanding customers.
+                </h5>
+                <p class="work-page__small-text">Development, integrations, support</p>
+                <i class="work-page__link-desktop _link-www-icon"></i>
+            </div>
+        </a>
 
-    <!-- Chicco -->
-    <a class="work-page__dual-bottom" href="https://chicco.com.ua/" target="_blank">
-      <div class="dual-bottom__img work-page__image">
-        <img loading="lazy" src="{{media url='wysiwyg/work/chicco_banner.png'}}" alt="Chicco ecommerce development" />
-      </div>
-      <div class="work-page__info">
-        <h4 class="_h4">
-          Chicco
-          <i class="work-page__link-mobile _link-www-icon _link-www-icon--mobile"></i>
-        </h4>
-        <h5 class="h5">
-          Chicco is an Italian manufacturer of children's clothing and toys with retail outlets worldwide
-        </h5>
-        <p class="work-page__small-text">Development, integrations, support</p>
-        <i class="work-page__link-desktop _link-www-icon"></i>
-      </div>
-    </a>
+        <!-- Chicco -->
+        <a class="work-page__dual-bottom" href="https://chicco.com.ua/" target="_blank">
+            <div class="dual-bottom__img work-page__image">
+                <img loading="lazy" src="{{media url='wysiwyg/work/chicco_banner.png'}}" alt="Chicco ecommerce development" />
+            </div>
+            <div class="work-page__info">
+                <h4 class="_h4">
+                    Chicco
+                    <i class="work-page__link-mobile _link-www-icon _link-www-icon--mobile"></i>
+                </h4>
+                <h5 class="h5">
+                    Chicco is an Italian manufacturer of children's clothing and toys with retail outlets worldwide
+                </h5>
+                <p class="work-page__small-text">Development, integrations, support</p>
+                <i class="work-page__link-desktop _link-www-icon"></i>
+            </div>
+        </a>
 
-    <!-- GoodWine -->
-    <a class="work-page__row-reverse work-page__last-item" href="https://goodwine.com.ua/" target="_blank">
-      <div class="row-reverse__img work-page__image">
-        <img loading="lazy" src="{{media url='wysiwyg/work/full-bottle-wine-with-copy-space_4_.png'}}" alt="ecommerce development for food delivery store" />
-      </div>
-      <div class="work-page__info">
-        <h4 class="_h4">
-          Goodwine
-          <i class="work-page__link-mobile _link-www-icon _link-www-icon--mobile"></i>
-        </h4>
-        <h5 class="h5">
-          official online store of the international<br />
-          brand under which household appliances and dishes are produced
-        </h5>
-        <p class="work-page__small-text">Development, integrations, support</p>
-        <i class="work-page__link-desktop _link-www-icon"></i>
-      </div>
-    </a>
-  </div>
+        <!-- GoodWine -->
+        <a class="work-page__row-reverse work-page__last-item" href="https://goodwine.com.ua/" target="_blank">
+            <div class="row-reverse__img work-page__image">
+                <img loading="lazy" src="{{media url='wysiwyg/work/full-bottle-wine-with-copy-space_4_.png'}}" alt="ecommerce development for food delivery store" />
+            </div>
+            <div class="work-page__info">
+                <h4 class="_h4">
+                    Goodwine
+                    <i class="work-page__link-mobile _link-www-icon _link-www-icon--mobile"></i>
+                </h4>
+                <h5 class="h5">
+                    official online store of the international<br />
+                    brand under which household appliances and dishes are produced
+                </h5>
+                <p class="work-page__small-text">Development, integrations, support</p>
+                <i class="work-page__link-desktop _link-www-icon"></i>
+            </div>
+        </a>
+    </div>
 </div>
