change blocks and page

--- a/files for admin/CMS Pages/services.phtml
+++ b/files for admin/CMS Pages/services.phtml
@@ -67,6 +67,7 @@
                 </a>
                 <meta itemprop="position" content="4" />
             </div>
+
             <div class="services-squares__square" itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
                 <a
                         itemprop="item"
@@ -400,7 +401,7 @@
                         class="service-section__mobile"
                         href="{{store url='services/magento-support'}}"
                 >
-                
+
                     <button type="button" class="service-section__mobile-button _button _button--arrow">
                         <span class="_button__text"> Discover more </span>
                         <span class="_button__text-overlay" style="clip: rect(0px, 0px, 24px, 0px)"> Discover more </span>
@@ -502,5 +503,50 @@
                 </a>
             </div>
         </section>
+        <!--<section
+    id="services-integration-section"
+    class="services-page__service-section service-section"
+    itemscope
+    itemtype="https://schema.org/Product"
+>
+    <div class="service-section__body _grid-3-col">
+        <div class="service-section__label _section-label" itemprop="keywords">Integration</div>
+        <div class="service-section__content">
+            <h3 class="h3 service-section__title" itemprop="name">Magento Integration</h3>
+            <p class="service-section__text" itemprop="description">
+                Integrate your Magento website with any backend system or external software to automate
+                your work processes and execute your business strategy more efficiently
+            </p>
+            <ul class="service-section__list">
+                <a href="{{store url='services/magento-integration'}}">
+                    <button type="button" class="service-section__button _button _button--arrow">
+                        <span class="_button__text"> Discover more </span>
+                        <span class="_button__text-overlay" style="clip: rect(0px, 0px, 24px, 0px)"> Discover more </span>
+                        <span class="_button__overlay _button__overlay--hover"></span>
+                        <span class="_button__overlay _button__overlay--active"></span>
+                    </button>
+                </a>
+        </div>
+        <div class="service-section__image">
+            <img
+                loading="lazy"
+                src="{{media url='wysiwyg/Service/magento-integration.svg'}}"
+                alt="Magento Web Development"
+                itemprop="logo"
+            />
+        </div>
+        <a
+            class="service-section__mobile"
+            href="services/magento-integration"
+        >
+            <button type="button" class="service-section__mobile-button _button _button--arrow">
+                <span class="_button__text"> Discover more </span>
+                <span class="_button__text-overlay" style="clip: rect(0px, 0px, 24px, 0px)"> Discover more </span>
+                <span class="_button__overlay _button__overlay--hover"></span>
+                <span class="_button__overlay _button__overlay--active"></span>
+            </button>
+        </a>
+    </div>
+</section>-->
     </div>
 </div>
