vodafone page from prod

--- a/files for admin/CMS Pages/extensions.phtml
+++ b/files for admin/CMS Pages/extensions.phtml
@@ -118,8 +118,8 @@
 
                 <a href="https://commercemarketplace.adobe.com/media/catalog/product/resolve-magento2-2-1-6-ce/installation_guides.pdf">
                     <button type="button" class="service-section__button _button _button--arrow">
-                        <span class="_button__text"> View on Github </span>
-                        <span class="_button__text-overlay" style="clip: rect(0px, 0px, 24px, 0px)"> View on Github </span>
+                        <span class="_button__text"> View on Marketplace </span>
+                        <span class="_button__text-overlay" style="clip: rect(0px, 0px, 24px, 0px)"> View on Marketplace </span>
                         <span class="_button__overlay _button__overlay--hover"></span>
                         <span class="_button__overlay _button__overlay--active"></span>
                     </button>
