change vodagon page

--- a/files for admin/CMS Pages/works/vodafone.phtml
+++ b/files for admin/CMS Pages/works/vodafone.phtml
@@ -2,16 +2,16 @@
     <div class="single-work-page__container _container">
         <div class="_grid-2-col">
             <div class="empty"></div>
-            <h1 class="single-work-page__title _page-title mb-32">Vodafone</h1>
+            <h1 class="single-work-page__title _page-title">Vodafone</h1>
         </div>
         <section class="single-work-page__top single-work-top">
-            <div class="single-work-top__body _grid-2-col mb-64">
+            <div class="single-work-top__body _grid-2-col">
                 <div class="single-work-top__label _section-label ">
-                    <a href="" class="single-work-top__link single-work-top__link--desktop"></a>
+                    <a href="" class="single-work-top__link"></a>
                 </div>
                 <div>
                     <div>
-                        <h5 class="single-work-top__text single-work-page__description mb-32">Vodafone online store is an online platform of the leading mobile operator Vodafone Ukraine, which serves more than 19
+                        <h5 class="single-work-top__text single-work-page__description">Vodafone online store is an online platform of the leading mobile operator Vodafone Ukraine, which serves more than 19
                             million subscribers. The company is committed to providing customers with an equal opportunity to access technology and the latest mobile services. </h5>
                     </div>
                     <ul class="services-list">
@@ -21,13 +21,12 @@
                         <li class="mb-0"><a href="">Server & Magento Optimization</a></li>
                     </ul>
                 </div>
-
-
-                <a href="" class="single-work-top__link single-work-top__link--mobile"></a>
-
             </div>
             <div class="single-work-page__image single-work-page__image--w-full">
-                <img src="https://m2perspective.test/media/wysiwyg/cases/vodafon/industry.jpg" alt="Vodafone online store top" />
+                <picture>
+                    <source  srcset="https://m2perspective.test/media/wysiwyg/works/vodafone/industry_mob.png" media="(max-width: 767px)" />
+                    <img src="https://m2perspective.test/media/wysiwyg/cases/vodafon/industry.jpg" alt="Vodafone online store top" />
+                </picture>
             </div>
         </section>
         <section class="single-work-page__tech _grid-2-col">
@@ -46,14 +45,14 @@
             <div class="single-work-goals__body _grid-2-col">
                 <div class="single-work-goals__label _section-label">Goals</div>
                 <div class="service-single__content service-single__content--wide">
-                    <h2 class="h3 mb-24" itemprop="name">The main task</h2>
+                    <h2 class="h3 single-work-goals__title single-work-section__title" itemprop="name">The main task</h2>
                     <div class="text-2col">
                         <div>
                             <p class="mb-16">
                                 The company developed very quickly, increasing the volume of visitors and sales. More and more products, services and offers for
                                 customers appeared that needed to be organically displayed in the online store.
                             </p>
-                            <p class="mb-0">
+                            <p class="mb-16 mb-md-0">
                                 The design of the working website did not correspond to the scale of the company and looked outdated. A fresh look at the
                                 interface and design was required, without losing brand recognition.
                             </p>
@@ -73,7 +72,7 @@
             <div class="single-work-goals__body _grid-3-col">
                 <div class="single-work-goals__label _section-label">Results</div>
                 <div class="single-work-goals__col">
-                    <h3 class="single-work-goals__title h3 mb-24">What we did</h3>
+                    <h3 class="single-work-goals__title h3 single-work-section__title">What we did</h3>
                     <div>
                         <p class="mb-16">
                             The following pages have been developed: checkout, catalog, menu (4 levels for 130 + thousand products) also
@@ -119,7 +118,7 @@
                 <div class="single-work-homepage__label _section-label">Homepage</div>
 
                 <div class="single-work-homepage__content single-work-homepage__content--wide">
-                    <h3 class="single-work-homepage__title h3 mb-24">Homepage is the <br /> soul of a brand</h3>
+                    <h3 class="single-work-homepage__title h3 single-work-section__title">Homepage is the <br /> soul of a brand</h3>
                     <p class="single-work-homepage__text content-shortened">Home page is an important navigation element. Thanks to the home page, users can go to the required section and in which case
                         always return to the "starting point". And this is especially felt when visiting a store from a mobile device, when the menu is not so clear and it is the main one that is used to go to the desired section.</p>
 
@@ -158,7 +157,7 @@
                 </div>
 
                 <div class="single-work-homepage__content single-work-homepage__content--second">
-                    <h3 class="single-work-homepage__title h3 mb-24">Elasticsearch</h3>
+                    <h3 class="single-work-homepage__title h3 single-work-section__title">Elasticsearch</h3>
                     <p class="single-work-homepage__text">Convert searches to sales with Elastic Search. Instantly show customers the most relevant search results, helping them find what they're looking for faster.</p>
                     <ul class="single-work-homepage__list _list">
                         <li class="mb-8">
@@ -180,7 +179,7 @@
                 </div>
 
                 <div class="single-work-homepage__content single-work-homepage__content--third">
-                    <h3 class="single-work-homepage__title h3 mb-24">Mega menu</h3>
+                    <h3 class="single-work-homepage__title h3 single-work-section__title">Mega menu</h3>
                     <p class="single-work-homepage__text">We have improved the quality of customer service by providing fast and flexible access to all pages of the online store. Expand the possibilities of your store by creating an attractive and dynamic navigation menu.</p>
                     <ul class="single-work-homepage__list _list">
                         <li>
@@ -197,7 +196,6 @@
 
                 <div class="single-work-page__image single-work-page__image--w-full single-work-homepage__image single-work-homepage__image--first">
                     <img src="https://m2perspective.test/media/wysiwyg/cases/vodafon/vodafon-homepage-1.png" alt="Vodafone online store homepage screenshot 1" />
-
                 </div>
                 <div class="single-work-page__image single-work-page__image--w-full single-work-homepage__image">
                     <img src="https://m2perspective.test/media/wysiwyg/cases/vodafon/vodafon-homepage-2.png" alt="Vodafone online store homepage screenshot 2" />
@@ -251,7 +249,7 @@
             <div class="single-work-product__body _grid-2-col">
                 <div class="single-work-product__label _section-label">Product page</div>
                 <div class="single-work-product__content content-shortened">
-                    <h3 class="single-work-product__title h3 mb-32">product pages that motivate shoppers to buy</h3>
+                    <h3 class="single-work-product__title h3 single-work-section__title">product pages that motivate shoppers to buy</h3>
 
                     <div class="single-work-product__text">
                         <p>When designing an online store, a lot of focus goes into the homepage—after all, it’s the first thing visitors see when they arrive. But the real goal of any ecommerce website is sales, and there’s no way you’ll achieve that without stellar product pages</p>
@@ -390,7 +388,7 @@
 
                     <div class="single-work-checkout__cell single-work-checkout__cell--mobile">
                         <div class="single-work-page__image single-work-page__image--w-full">
-                            <img src="https://m2perspective.test/media/wysiwyg/works/vodafone/vod-checkout-4.png" alt="Vodafone online store checkout screenshot 4" />
+                            <img src="https://m2perspective.test/media/wysiwyg/works/vodafone/vod-checkout-mob.png" alt="Vodafone online store checkout screenshot 4" />
                         </div>
                     </div>
                 </div>
@@ -518,6 +516,17 @@
 
             <div class="single-work-page__image single-work-page__image--w-full single-work-adaptive__image ">
                 <img src="https://m2perspective.test/media/wysiwyg/works/vodafone/vod-adaptive.png" alt="Vodafone online store adaptive screen" />
+            </div>
+        </section>
+        <section class="single-work-page__testimonials single-work-testimonials">
+            <div class="single-work-testimonials__body _grid-2-col">
+                <div class="single-work-testimonials__label _section-label">Testimonials</div>
+
+                <div class="single-work-testimonials__content">
+                    <h3 class="single-work-testimonials__title single-work-section__title">What our client say about us</h3>
+                    <script type="text/javascript" src="https://widget.clutch.co/static/js/widget.js" async></script> <div class="clutch-widget" data-url="https://widget.clutch.co" data-widget-type="4" data-height="auto" data-nofollow="true" data-expandifr="true" data-scale="100" data-scale="100" data-reviews="" data-clutchcompany-id="1306745"></div>
+                </div>
+
             </div>
         </section>
 
